--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "socket.io": "^2.3.0"
     },
     "devDependencies": {
-        "mocha": "5.0.0",
+        "mocha": "^5.0.0",
         "nodemod": "^1.5.19",
         "supertest": "3.0.0",
         "unit.js": "2.0.0"
